# AI-Travel-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills.md
config/: company_policy.yaml  settings.yaml
mock_merchants/: base.py  flight_merchant.py  hotel_merchant.py  inventory.json  transport_merchant.py
src/travel_agent/: cli.py  main.py
src/travel_agent/agent/: memory.py  orchestrator.py  prompts.py  tools.py
src/travel_agent/ap2/: mandates.py  models.py  payment.py  signing.py
src/travel_agent/api/: routes.py
src/travel_agent/db/: engine.py  models.py  repository.py
src/travel_agent/escalation/: handler.py  models.py
src/travel_agent/policy/: engine.py  loader.py  models.py
src/travel_agent/travel/: merchants.py  models.py  search.py
src/travel_agent/ucp/: checkout.py  client.py  discovery.py  models.py  orders.py
src/travel_agent/web/: routes.py
src/travel_agent/web/templates/: approval_detail.html  approvals.html  base.html  index.html  trip_status.html
src/travel_agent/webhooks/: routes.py
tests/: conftest.py
tests/integration/: test_mock_merchants.py
tests/unit/: test_ap2_mandates.py  test_policy_engine.py
