[project]
name = "ai-travel-agent"
version = "0.1.0"
description = "AI assistant for autonomously booking business travel using UCP and AP2 protocols"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "anthropic>=0.42.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.18",
    "cryptography>=44.0.0",
    "pyjwt>=2.10.0",
    "click>=8.1.7",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
travel-agent = "travel_agent.cli:cli"
travel-server = "travel_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
